# Kafi_chatbot

./: .env.example  .gitignore  VRAM.txt  gemini_test_output.txt  gold_data.csv  pyproject.toml
backend/: main.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/.cache/: semantic_cache.sqlite-shm  semantic_cache.sqlite-wal
backend/config/: agents.yaml  guardrails.yaml  llms.yaml  pipeline.yaml  router.yaml
backend/scripts/: ingest_knowledge.py
backend/src/: main.py
backend/src/agents/: financial_agent.py
backend/src/conversation/: session_manager.py
backend/src/pipeline/: chat_pipeline.py
backend/src/routers/: chatbot.py  market_data.py
backend/src/schemas/: chat_schema.py
backend/src/utils/: app_config.py  embeddings.py  guardrails.py  hf_textgen.py  knowledge_base.py  knowledge_manager.py  llm.py  logger.py  reranker.py  router.py  semantic_cache.py  vram.py
craw_market/: crawler.py  gold_data.csv  requirements.txt  visualize.py
frontend/: index.html  package-lock.json  package.json  trading_logic.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend_v2/src/: App.tsx
llm_models/: Qwen3.5_9B.py  Qwen3_VL_8B_Instruct.py
rag_systems/optimize_rag/: README_EVAL.md  eval_rag_llama.py  eval_rag_qwen3_8b.py  rag_llama.py  rag_production.py  rag_qwen.py  rag_qwen3_8b.py  test_dataset.json  test_gemini_api.py
rlm/: rlm_idmodel_chatgpt.py
test/craw_market/: collect_dataset.py
test/finetune/: .gitignore  README.md  requirements.txt  run_data.py  run_tune.py
test/llm_models/: Qwen3_8B.py  run_gemma4_e4b.py
(+14 files in other folders)
